# trxbewi_ros2

./: README.md
core/trxbewi_bringup/config/: joint_trajectory_publisher.yaml
core/trxbewi_bringup/launch/: bringup.launch.py
core/trxbewi_cam/: CMakeLists.txt  package.xml
core/trxbewi_cam/camera_info/: rpi_csi.yaml
core/trxbewi_cam/config/: config.yaml
core/trxbewi_cam/env-hooks/: 99_libcamera_prepend.sh.in
core/trxbewi_cam/launch/: cam.launch.py
core/trxbewi_control/: CMakeLists.txt  package.xml
core/trxbewi_control/config/: controllers.yaml
core/trxbewi_control/launch/: control_manager.launch.py
core/trxbewi_control/xacro/: mobile_base.ros2_control.xacro
core/trxbewi_description/: CMakeLists.txt  package.xml
core/trxbewi_description/urdf/: mobile_base.xacro  mobile_base_old.xacro  trxbewi.urdf.xacro
core/trxbewi_scan/config/: config.yaml
core/trxbewi_simulation/: CMakeLists.txt  package.xml
core/trxbewi_simulation/xacro/: mobile_base.gazebo.xacro
core/trxbewi_slam/: CMakeLists.txt  package.xml
core/trxbewi_slam/config/: config.yaml
core/trxbewi_slam/launch/: slam.launch.py
core/trxbewi_teleop/: CMakeLists.txt
core/trxbewi_teleop/config/: config.yaml
core/trxbewi_teleop/launch/: teleop.launch.py
ihm/trxbewi_ihm/: CMakeLists.txt
ihm/trxbewi_ihm/launch/: view_launch.py
ihm/trxbewi_rviz/launch/: view_launch.py
ihm/trxbewi_rviz/rviz/: trxbewi.rviz
shared/trxbewi_description/: CMakeLists.txt  package.xml
shared/trxbewi_description/launch/: rqt_dashboard.launch.py  rqt_standalone.launch.py  rviz.launch.py
shared/trxbewi_description/rqt/: trxbewi_dashboard.perspective
shared/trxbewi_description/rviz/: trxbewi.rviz  trxwebi_view.rviz
shared/trxbewi_description/urdf/: mobile_base.xacro  trx4_base.xacro  trxbewi.urdf.xacro
trxbewi_bringup/: CMakeLists.txt  package.xml
trxbewi_bringup/launch/: bringup.launch.py  simulation.launch.py
trxbewi_control/: package.xml
trxbewi_control/config/: controllers.yaml
trxbewi_control/launch/: control_spawner.launch.py
trxbewi_control/xacro/: mobile_base.ros2_control.xacro  trxbewi.ros2_control.xacro
trxbewi_description/launch/: gui.launch.py  robot_state_publisher.launch.py
trxbewi_description/urdf/: common_properties.xacro  mobile_base.xacro  sensors.xacro
trxbewi_ihm/: package.xml
trxbewi_scan/launch/: scan.launch.py
trxbewi_simulation/: package.xml
trxbewi_simulation/launch/: gz.launch.py
trxbewi_simulation/macros/: imu.xacro
trxbewi_simulation/xacro/: trxbewi.gazebo.xacro
trxbewi_teleop/: package.xml
trxbewi_teleop/launch/: teleop.launch.py
