<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trxbewi_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lionel.orcil@iobewi.com">ORCIL Lionel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>ros2_controllers_test_nodes</exec_depend>

  <exec_depend>trxbewi_control</exec_depend>
  <exec_depend>trxbewi_description</exec_depend>
  <exec_depend>trxbewi_simulation</exec_depend>
  <exec_depend>trxbewi_teleop</exec_depend>
  <exec_depend>trxbewi_scan</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
