<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trxbewi_simulation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lionel.orcil@iobewi.com">ORCIL Lionel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>
  <exec_depend>trxbewi_description</exec_depend>
  <exec_depend>trxbewi_control</exec_depend>
  <exec_depend>trxbewi_localization</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
