<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trxbewi_description</name>
  <version>0.1.0</version>
  <description>Package with URDF and description files of TRXbewi</description>
  <maintainer email="lionel.orcil@iobewi.com">ORCIL Lionel</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_image_view</exec_depend>
  <exec_depend>rqt_plot</exec_depend>
  <exec_depend>rqt_topic</exec_depend>
  <exec_depend>rqt_console</exec_depend>
  <exec_depend>rqt_reconfigure</exec_depend>
  <exec_depend>rqt_tf_tree</exec_depend>
  <exec_depend>rqt_robot_steering</exec_depend>
  <exec_depend>rqt_logger_level</exec_depend>
  <exec_depend>rqt_controller_manager</exec_depend>
  <exec_depend>rqt_joint_trajectory_controller</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
